force-app/main/default/objects/Campaign/fields/Cadence__c.field-meta.xml
<CustomField>
    <fullName>Cadence__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>What Cadence is associated with this Campaign? This will be added to a record once it reaches the Cadence Marketing Stage</inlineHelpText>
    <label>Cadence</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select an active Cadence.</errorMessage>
        <filterItems>
            <field>Cadence__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Cadence__c</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>