force-app/main/default/objects/Campaign/fields/CadenceMarketingStage__c.field-meta.xml
<CustomField>
    <fullName>CadenceMarketingStage__c</fullName>
    <inlineHelpText>At what Marketing stage do we add the cadence (if the lookup is populated)?</inlineHelpText>
    <label>Cadence Marketing Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MQL</fullName>
            </value>
            <value>
                <fullName>TAL</fullName>
            </value>
            <value>
                <fullName>TQO</fullName>
            </value>
            <value>
                <fullName>SAO</fullName>
            </value>
            <value>
                <fullName>SQO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>