force-app/main/default/objects/Campaign/fields/Destination__c.field-meta.xml
<CustomField>
    <fullName>Destination__c</fullName>
    <inlineHelpText>What is the destination of the records attached to this campaign?</inlineHelpText>
    <label>Destination</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Paychex</fullName>
            </value>
            <value>
                <fullName>Oasis</fullName>
            </value>
            <value>
                <fullName>HROI</fullName>
            </value>
            <value>
                <fullName>Flock</fullName>
            </value>
            <value>
                <fullName>BeneTrac</fullName>
            </value>
            <value>
                <fullName>Rework</fullName>
            </value>
            <value>
                <fullName>Exhausted</fullName>
            </value>
            <value>
                <fullName>Recycle</fullName>
            </value>
            <value>
                <fullName>INB-SOAR</fullName>
            </value>
            <value>
                <fullName>Speed to Lead</fullName>
            </value>
            <value>
                <fullName>Stalled Opps</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>