force-app/main/default/objects/Campaign/fields/DestinationNbrDays__c.field-meta.xml
<CustomField>
    <fullName>DestinationNbrDays__c</fullName>
    <description>APR0112505</description>
    <inlineHelpText>The number of days we&apos;ll use the latest campaign for. If the destination is set and the number of days is set, this will drive which Partner Types to use when going into the Submit Referral Form.</inlineHelpText>
    <label>Destination Nbr Days</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>