force-app/main/default/objects/Campaign/fields/Hold_Out_Reason__c.field-meta.xml
<CustomField>
    <fullName>Hold_Out_Reason__c</fullName>
    <description>Populate Ref Contact Hold Out Reason with this value for Drupal Forms</description>
    <formula>IF(ISPICKVAL( Target_Audience__c, &apos;Payroll Acquisition&apos;) , &apos;Centric Rep&apos;, &apos;&apos;)</formula>
    <label>Hold Out Reason</label>
    <type>Text</type>
</CustomField>