force-app/main/default/objects/Campaign/fields/IsParent__c.field-meta.xml
<CustomField>
    <fullName>IsParent__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is this the parent campaign to use when coming from the lead loader?</inlineHelpText>
    <label>Is Parent?</label>
    <type>Checkbox</type>
</CustomField>