force-app/main/default/objects/Campaign/fields/LeadSource__c.field-meta.xml
<CustomField>
    <fullName>LeadSource__c</fullName>
    <description>Used to set the lead source on opportunities that are directly linked to a campaign, and to set on a lead/contact that is linked to a campaign that does not already have a lead source.</description>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Acquisition</fullName>
            </value>
            <value>
                <fullName>Chamber of Commerce</fullName>
            </value>
            <value>
                <fullName>Cold Call</fullName>
            </value>
            <value>
                <fullName>Corp Marketing-Branch #800</fullName>
            </value>
            <value>
                <fullName>Corp Marketing-Chat</fullName>
            </value>
            <value>
                <fullName>Corp Marketing-Email</fullName>
            </value>
            <value>
                <fullName>Corp Marketing-Event</fullName>
            </value>
            <value>
                <fullName>Corp Marketing-Organic Search</fullName>
            </value>
            <value>
                <fullName>Corp Marketing-Paid Search</fullName>
            </value>
            <value>
                <fullName>Corp Marketing-Social Media</fullName>
            </value>
            <value>
                <fullName>Corp Marketing-Traditional Media</fullName>
            </value>
            <value>
                <fullName>Corp Marketing-Web</fullName>
            </value>
            <value>
                <fullName>Current Client-Additional Product</fullName>
            </value>
            <value>
                <fullName>Current Client - New Ownership</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Follow-up/Delivery</fullName>
            </value>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Inbound Only</fullName>
            </value>
            <value>
                <fullName>Infogroup</fullName>
            </value>
            <value>
                <fullName>Jigsaw</fullName>
            </value>
            <value>
                <fullName>Local Advertising</fullName>
            </value>
            <value>
                <fullName>Local Direct Mail</fullName>
            </value>
            <value>
                <fullName>Local Drop</fullName>
            </value>
            <value>
                <fullName>Local Email</fullName>
            </value>
            <value>
                <fullName>Local Email Marketing</fullName>
            </value>
            <value>
                <fullName>Local Networking</fullName>
            </value>
            <value>
                <fullName>Local Rep Telemarketing</fullName>
            </value>
            <value>
                <fullName>Local Seminar</fullName>
            </value>
            <value>
                <fullName>Local Tradeshow</fullName>
            </value>
            <value>
                <fullName>Lost Client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>