force-app/main/default/objects/Campaign/fields/NSS_Inbound_Date__c.field-meta.xml
<CustomField>
    <fullName>NSS_Inbound_Date__c</fullName>
    <description>the day the NSS Inbound field was checked - set by workflow</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date NSS Inbound was checked - automatically set</inlineHelpText>
    <label>NSS Inbound Date</label>
    <type>Date</type>
</CustomField>