force-app/main/default/objects/Campaign/fields/Originator__c.field-meta.xml
<CustomField>
    <fullName>Originator__c</fullName>
    <inlineHelpText>What department is creating the campaign?</inlineHelpText>
    <label>Originator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Field Sales</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>NSS</fullName>
            </value>
            <value>
                <fullName>Virtual Sales</fullName>
            </value>
            <value>
                <fullName>Oasis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>