force-app/main/default/objects/Campaign/fields/PartnerType__c.field-meta.xml
<CustomField>
    <fullName>PartnerType__c</fullName>
    <description>APR0112505</description>
    <formula>/*
IF (AND(BLANKVALUE(DestinationNbrDays__c,0)&gt;0, ISPICKVAL( Destination__c , &apos;Paychex&apos;))
     ,&apos;NSS Referral&apos;
    ,IF (AND(BLANKVALUE(DestinationNbrDays__c,0)&gt;0, ISPICKVAL( Destination__c , &apos;Oasis&apos;))
         ,&apos;Oasis&apos;,&apos;&apos;))
*/
&quot;&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If we are forcing the use of a partner type in the Submit Referral form, which type?</inlineHelpText>
    <label>Partner Type</label>
    <type>Text</type>
</CustomField>