force-app/main/default/objects/Campaign/fields/Referral_Source_Business_Type__c.field-meta.xml
<CustomField>
    <fullName>Referral_Source_Business_Type__c</fullName>
    <description>Populate Ref Contact Source Business Type with this value for Drupal Forms</description>
    <formula>IF(ISPICKVAL( Target_Audience__c, &apos;Payroll Acquisition&apos;) , 
&apos;Payroll Company&apos;, 
IF(ISPICKVAL( Target_Audience__c, &apos;CPA&apos;) , 
&apos;Accounting Firm&apos;,
IF(ISPICKVAL( Target_Audience__c, &apos;Insurance Broker&apos;) , 
&apos;Insurance Broker&apos;,  
&apos;&apos;
)
)
)</formula>
    <label>Referral Source Business Type</label>
    <type>Text</type>
</CustomField>