force-app/main/default/objects/Campaign/fields/RefPartnerNSSSource__c.field-meta.xml
<CustomField>
    <fullName>RefPartnerNSSSource__c</fullName>
    <description>APR0112505</description>
    <formula>/*
IF (AND(BLANKVALUE(DestinationNbrDays__c,0)&gt;0, ISPICKVAL( Destination__c , &apos;Paychex&apos;))
,&apos;Inbound&apos;
,IF (AND(BLANKVALUE(DestinationNbrDays__c,0)&gt;0, ISPICKVAL( Destination__c , &apos;Oasis&apos;))
,&apos;Inbound-Oasis&apos;,&apos;&apos;))
*/
&quot;&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Which NSS Source we should use when selecting the Referral Partners for the Submit Referral Form.</inlineHelpText>
    <label>Ref Partner NSS Source</label>
    <type>Text</type>
</CustomField>