force-app/main/default/objects/Campaign/fields/Send_To_Virtual__c.field-meta.xml
<CustomField>
    <fullName>Send_To_Virtual__c</fullName>
    <description>Sends the lead directly to Virtual Sales</description>
    <inlineHelpText>Choose &quot;Always&quot; if the lead should go straight to virtual regardless of who the territory rep. Choose &quot;Check Zips&quot; if the territory rep needs to be a virtual user for the lead to go straight to virtual.</inlineHelpText>
    <label>Send To Virtual</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Always</fullName>
            </value>
            <value>
                <fullName>BZ Email 10+</fullName>
            </value>
            <value>
                <fullName>Chat</fullName>
            </value>
            <value>
                <fullName>Chat Offline</fullName>
            </value>
            <value>
                <fullName>Check Zips</fullName>
            </value>
            <value>
                <fullName>Drift-Chat</fullName>
            </value>
            <value>
                <fullName>Ecomm Abandon Form 2-3</fullName>
            </value>
            <value>
                <fullName>ESR</fullName>
            </value>
            <value>
                <fullName>HNB</fullName>
            </value>
            <value>
                <fullName>Inbound Special</fullName>
            </value>
            <value>
                <fullName>Marketing Test</fullName>
            </value>
            <value>
                <fullName>NSS Inbound</fullName>
            </value>
            <value>
                <fullName>Oasis</fullName>
            </value>
            <value>
                <fullName>Oasis Inbound Queue</fullName>
            </value>
            <value>
                <fullName>Oasis PEO Pod Pilot</fullName>
            </value>
            <value>
                <fullName>PEO Centric Ownership</fullName>
            </value>
            <value>
                <fullName>PNC</fullName>
            </value>
            <value>
                <fullName>Pre Qualified MQLs</fullName>
            </value>
            <value>
                <fullName>Sales Acceleration</fullName>
            </value>
            <value>
                <fullName>Software Advice FY21</fullName>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
            <value>
                <fullName>Speed to Lead</fullName>
            </value>
            <value>
                <fullName>VS BuyerZone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>