force-app/main/default/objects/Campaign/fields/Submit_Referral_Queue__c.field-meta.xml
<CustomField>
    <fullName>Submit_Referral_Queue__c</fullName>
    <label>Submit Referral Queue</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>VS BuyerZone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>