force-app/main/default/objects/Campaign/fields/Type_3__c.field-meta.xml
<CustomField>
    <fullName>Type_3__c</fullName>
    <description>A finer sub-type as it relays to the Type and Type 2, of which a Campaign represents. Updated by Marketing</description>
    <inlineHelpText>What is the detailed sub-type of this Campaign by the Type?</inlineHelpText>
    <label>Type 3</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Affiliate</fullName>
            </value>
            <value>
                <fullName>Calls</fullName>
            </value>
            <value>
                <fullName>Chats</fullName>
            </value>
            <value>
                <fullName>Ecomm - Facebook</fullName>
            </value>
            <value>
                <fullName>Ecomm - YouTube</fullName>
            </value>
            <value>
                <fullName>ERTC - FB</fullName>
            </value>
            <value>
                <fullName>ERTC - Google</fullName>
            </value>
            <value>
                <fullName>Homepage</fullName>
            </value>
            <value>
                <fullName>Lead Gen 20+ Facebook</fullName>
            </value>
            <value>
                <fullName>Lead Gen 20+ LinkedIn</fullName>
            </value>
            <value>
                <fullName>Lead Gen - 800#</fullName>
            </value>
            <value>
                <fullName>Lead Gen - Brand</fullName>
            </value>
            <value>
                <fullName>Lead Gen - Competitor</fullName>
            </value>
            <value>
                <fullName>Lead Gen - Discovery</fullName>
            </value>
            <value>
                <fullName>Lead Gen - Discovery 20+</fullName>
            </value>
            <value>
                <fullName>Lead Gen - Facebook</fullName>
            </value>
            <value>
                <fullName>Lead Gen - LinkedIn</fullName>
            </value>
            <value>
                <fullName>Lead Gen - Non Brand</fullName>
            </value>
            <value>
                <fullName>Lead Gen - Remarketing</fullName>
            </value>
            <value>
                <fullName>Lead Gen - Small Business</fullName>
            </value>
            <value>
                <fullName>Other - Branch</fullName>
            </value>
            <value>
                <fullName>Other - DG Direct</fullName>
            </value>
            <value>
                <fullName>Other - Generic Inbound</fullName>
            </value>
            <value>
                <fullName>Other - House List</fullName>
            </value>
            <value>
                <fullName>Other - Intentsify</fullName>
            </value>
            <value>
                <fullName>Other - Other Other</fullName>
            </value>
            <value>
                <fullName>Other - Paid Media</fullName>
            </value>
            <value>
                <fullName>Other - Paychex HR</fullName>
            </value>
            <value>
                <fullName>Other - PPL</fullName>
            </value>
            <value>
                <fullName>Other - Threshold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>