force-app/main/default/objects/Campaign/recordTypes/Marketing_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Marketing_Record_Type</fullName>
    <active>true</active>
    <label>Marketing Record Type</label>
</RecordType>