force-app/main/default/objects/Campaign/recordTypes/Sales_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Sales_Record_Type</fullName>
    <active>true</active>
    <description>Record type for Sales</description>
    <label>Sales Record Type</label>
</RecordType>