force-app/main/default/objects/Campaign/validationRules/Cannot_Modify_Parent_EList_Campaign.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Modify_Parent_EList_Campaign</fullName>
    <active>true</active>
    <description>Validation rule not allowing anyone other than a system admin to modify the parent e-list campaign</description>
    <errorConditionFormula>AND($Profile.Name &lt;&gt; &quot;System Administrator&quot;,
     Id = &apos;70170000000VDWY&apos;)</errorConditionFormula>
    <errorMessage>Only System Administrators may modify the Parent E-List Campaign record.  Please contact support for assistance.</errorMessage>
</ValidationRule>