force-app/main/default/objects/Campaign/listViews/Active_with_No_Start_Date.listView-meta.xml
<ListView>
    <fullName>Active_with_No_Start_Date</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>ACD_Name__c</columns>
    <columns>CAMPAIGN.NUM_CONTACTS</columns>
    <columns>CAMPAIGN.NUM_LEADS</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CAMPAIGN.START_DATE</field>
        <operation>equals</operation>
    </filters>
    <label>Active with No Start Date</label>
</ListView>