force-app/main/default/objects/Campaign/listViews/All_Active_with_ACD_Names.listView-meta.xml
<ListView>
    <fullName>All_Active_with_ACD_Names</fullName>
    <columns>CAMPAIGN.CREATED_DATE</columns>
    <columns>CAMPAIGN.NAME</columns>
    <columns>ACD_Name__c</columns>
    <columns>CAMPAIGN.NUM_CONTACTS</columns>
    <columns>CAMPAIGN.NUM_LEADS</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>ACD_Name__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All Active with ACD Names</label>
</ListView>