force-app/main/default/objects/Campaign/listViews/All_Active_with_ACD_Names1.listView-meta.xml
<ListView>
    <fullName>All_Active_with_ACD_Names1</fullName>
    <columns>CAMPAIGN.CREATED_DATE</columns>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.NUM_CONTACTS</columns>
    <columns>CAMPAIGN.NUM_LEADS</columns>
    <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Worked_By__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Campaigns</label>
</ListView>